<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:gravity="center"
	android:background="@color/colorPrimary"
	android:orientation="vertical"
	android:padding="@dimen/activity_horizontal_margin">

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/fullname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/full_name"
			android:inputType="text|textCapSentences"
			android:singleLine="true"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints=""
			android:hint="@string/email"
			android:inputType="textEmailAddress"
			android:singleLine="true"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:passwordToggleEnabled="true">

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password"
			android:inputType="textPassword"
			android:singleLine="true"/>

	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/sign_up_button"
		style="?android:textAppearanceSmall"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:text="@string/account_create"
		android:textAllCaps="false"
		android:textStyle="bold"/>

	<ProgressBar
		android:id="@+id/progressBar"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:layout_gravity="center|bottom"
		android:visibility="gone"
		android:layout_marginTop="10dp"/>

</LinearLayout>

