<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_gravity="center"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	card_view:cardCornerRadius="5dp"
	style="@style/CardViewTheme"
	android:id="@+id/mCardView">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/full_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:gravity="center"
			android:id="@+id/rankingUsername"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/points"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:gravity="center"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="0"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:gravity="center"
					android:id="@+id/rankingPoints"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/balance"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:gravity="center"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="R$0,00"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:gravity="center"
					android:id="@+id/rankingBalance"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</android.support.v7.widget.CardView>

