<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:padding="16dp">

	<android.support.v7.widget.CardView
		xmlns:card_view="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		card_view:cardCornerRadius="5dp"
		style="@style/CardViewTheme">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:padding="@dimen/padding_medium">

				<ImageView
					android:layout_width="@dimen/avatar_large"
					android:layout_height="@dimen/avatar_large"
					android:id="@+id/display_profile_picture"
					android:src="@drawable/ic_launcher"/>

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="@dimen/padding_medium"
					android:layout_weight="1.0">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:gravity="left|center"
						android:id="@+id/display_profile_name"
						android:text="@string/username"/>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:gravity="left|center"
						android:id="@+id/display_profile_email"
						android:text="@string/email"/>

				</LinearLayout>

				<ImageView
					android:src="@drawable/ic_message"
					android:layout_width="@dimen/drawable_small"
					android:layout_height="@dimen/drawable_small"
					android:layout_marginRight="@dimen/margin_medium"
					android:layout_marginLeft="@dimen/margin_medium"
					android:id="@+id/img_chat_plus"/>

			</LinearLayout>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<android.support.v7.widget.CardView
			xmlns:card_view="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			card_view:cardCornerRadius="5dp"
			style="@style/CardViewTheme"
			android:layout_weight="1.0">

			<FrameLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:gravity="bottom"
				android:layout_height="wrap_content"
				android:layout_weight="1.0">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="100dp"
					android:text="@string/points_value"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:gravity="center"
					android:marqueeRepeatLimit="marquee_forever"
					android:scrollHorizontally="true"
					android:singleLine="true"
					android:ellipsize="marquee"
					android:padding="@dimen/padding_medium"
					android:id="@+id/textview_show_points"/>

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom"
					android:padding="@dimen/padding_small">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="right|center"
						android:text="@string/points"
						android:padding="3dp"/>

				</LinearLayout>

			</FrameLayout>

		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			xmlns:card_view="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			card_view:cardCornerRadius="5dp"
			style="@style/CardViewTheme"
			android:layout_weight="1.0">

			<FrameLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:gravity="bottom"
				android:layout_height="wrap_content"
				android:layout_weight="1.0">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="100dp"
					android:text="@string/points_value"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:gravity="center"
					android:marqueeRepeatLimit="marquee_forever"
					android:scrollHorizontally="true"
					android:singleLine="true"
					android:ellipsize="marquee"
					android:padding="@dimen/padding_medium"
					android:id="@+id/textview_show_balance"/>

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom"
					android:padding="@dimen/padding_small">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="right|center"
						android:text="@string/balance"
						android:padding="3dp"/>

				</LinearLayout>

			</FrameLayout>

		</android.support.v7.widget.CardView>

	</LinearLayout>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/points_roulette"
		style="@style/ButtonTheme"
		android:id="@+id/pointsRoulette"/>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="45dp">

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.v7.widget.CardView
				xmlns:card_view="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				card_view:cardCornerRadius="5dp"
				style="@style/CardViewTheme"
				android:id="@+id/cardViewFreeFire"
				android:layout_weight="1.0">

				<FrameLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:gravity="bottom"
					android:layout_height="wrap_content">

					<ImageView
						android:src="@drawable/logo_freefire"
						android:layout_width="match_parent"
						android:layout_height="100dp"/>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="bottom"
						android:padding="@dimen/padding_small">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/minimum_value"
							android:padding="3dp"
							android:gravity="right|center"/>

					</LinearLayout>

				</FrameLayout>

			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				xmlns:card_view="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				card_view:cardCornerRadius="5dp"
				style="@style/CardViewTheme"
				android:id="@+id/cardViewGooglePlay"
				android:layout_weight="1.0">

				<FrameLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:gravity="bottom"
					android:layout_height="wrap_content">

					<ImageView
						android:src="@drawable/logo_googleplay"
						android:layout_width="match_parent"
						android:layout_height="100dp"/>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="bottom"
						android:padding="@dimen/padding_small">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/minimum_value"
							android:padding="3dp"
							android:gravity="right|center"/>

					</LinearLayout>

				</FrameLayout>

			</android.support.v7.widget.CardView>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.v7.widget.CardView
				xmlns:card_view="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				card_view:cardCornerRadius="5dp"
				style="@style/CardViewTheme"
				android:id="@+id/cardViewNetflix"
				android:layout_weight="1.0">

				<FrameLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:gravity="bottom"
					android:layout_height="wrap_content">

					<ImageView
						android:src="@drawable/logo_netflix"
						android:layout_width="match_parent"
						android:layout_height="100dp"/>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="bottom"
						android:padding="@dimen/padding_small">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/minimum_value"
							android:padding="3dp"
							android:gravity="right|center"/>

					</LinearLayout>

				</FrameLayout>

			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				xmlns:card_view="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				card_view:cardCornerRadius="5dp"
				style="@style/CardViewTheme"
				android:id="@+id/cardViewPix"
				android:layout_weight="1.0">

				<FrameLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:gravity="bottom"
					android:layout_height="wrap_content">

					<ImageView
						android:src="@drawable/logo_pix"
						android:layout_width="match_parent"
						android:layout_height="100dp"/>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="bottom"
						android:padding="@dimen/padding_small">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/minimum_value"
							android:padding="3dp"
							android:gravity="right|center"/>

					</LinearLayout>

				</FrameLayout>

			</android.support.v7.widget.CardView>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

